tdf#117713 set a tiny default size-request for the fixed container

otherwise we get a default one if SetMinClientSize is never called, which
is the case for these spawned-from-basic dialogs

Change-Id: I4f0389de6abcb1e99b32798969dca49bf8f0f760
Reviewed-on: https://gerrit.libreoffice.org/67063
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>